--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build on PR
+name: Build succeeds on PR
 
 on:
   pull_request:
@@ -17,9 +17,6 @@ jobs:
       
       - name: Install Dependencies
         run: npm install
-      
-      - name: Generate prisma client
-        run: npm run db:generate
         
       - name: Run Build
         run: npm run build
